# archlinux-driver-manager

./: .gitignore  Cargo.toml  README.md  database.ron  driver_database.ron  input_data.yaml  test.ron
packaging/: build_package.sh  install_package.sh  setup.sh
packaging/archlinux-driver-manager/: PKGBUILD
packaging/archlinux-driver-manager-git/: PKGBUILD
packaging/archlinux-driver-manager-local/: PKGBUILD
scripts/: build.sh  clean.sh  run.sh
scripts/archlinux_packaging/: PKGBUILD  archlinux-driver-manager-0.0.1-1-x86_64.pkg.tar.zst  build.sh  install.sh
scripts/packaging/: PKGBUILD  archlinux-driver-manager-0.0.1-1-x86_64.pkg.tar.zst  run.sh
src/: arch.rs  cli.rs  commandline.rs  data.rs  error.rs  lib.rs  main.rs
src/actions/: generate_database.rs  install.rs  list.rs  mod.rs  search.rs
src/data/: database.rs  input.rs  input_file.rs  mod.rs
