[package]
name = "archlinux-driver-manager"
version = "0.0.1"
edition = "2021"
license = "MPL-2.0"
authors = ["shivanandvp <shivanandvp.oss@gmail.com, shivanandvp@rebornos.org>"]
readme = "README.md"
repository = "https://gitlab.com/shivanandvp/archlinux-driver-manager.git"
description = "A driver manager for Arch Linux"
# documentation = "https://docs.rs/archlinux-driver-manager"
keywords = ["driver", "drivers", "hardware", "arch"]
categories = ["command-line-utilities"]
exclude = ["scripts/*", ".gitlab-ci.yml", "ArchLinuxDriverManager.code-workspace"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Commandline
clap = { version = "3.1", features = ["derive"] }
owo-colors = { version = "3.4", features = ["supports-colors"] }

# Data interchange
serde = { version = "1.0", features = ["derive"] }
rustbreak = { version = "2", features = ["ron_enc"] }
serde_yaml = "0.8"
serde_json = "1.0"

# Data model
ron = "0.7.0"
iset = "0.1"
rangemap = { version = "1.0", features = ["serde1"] }

# ArchLinux package management system
alpm = "2.2"
alpm-utils = "2.0"
pacmanconf = "2.0"

# Hardware identification
aparato = "6.0"
usb_enumeration = "0.1.2"

# Miscellaneous
snafu = "0.7"


