[package]
name = "archlinux-driver-manager"
version = "0.0.1"
edition = "2021"
license = "MPL-2.0"
authors = ["shivanandvp <shivanandvp.oss@gmail.com, shivanandvp@rebornos.org>"]
readme = "README.md"
repository = "https://gitlab.com/shivanandvp/archlinux-driver-manager.git"
description = "A driver manager for Arch Linux"
# documentation = "https://docs.rs/archlinux-driver-manager"
keywords = ["driver", "drivers", "hardware", "arch"]
categories = ["command-line-utilities"]
exclude = ["scripts/*", ".gitlab-ci.yml", "ArchLinuxDriverManager.code-workspace"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Commandline
clap = { version = "4.3", features = ["derive"] }
owo-colors = { version = "3.4", features = ["supports-colors"] }

# Data interchange
serde = { version = "1.0", features = ["derive"] }
jammdb = "0.9"
serde_yaml = "0.9"
serde_json = "1.0"
derivative = "2.2"
hex = { version = "0.4", features = ["serde"] }
rmp-serde = "1.1"
# Data model
ron = "0.8"

# ArchLinux package management system
alpm = "2.2"
alpm-utils = "2.0"
pacmanconf = "2.0"

# Hardware identification
devices = "0.3"
usb_enumeration = "0.2.0"

# Miscellaneous
snafu = "0.7"
sudo = "0.6"
lazy_static = "1.4.0"
